--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,13 +7,71 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"/>
   <link rel="stylesheet" href="../assets/css/style.css"/>
+
+  <style>
+    /* ── Panel slide ── */
+    .login-wrapper {
+      overflow: hidden;
+    }
+
+    .login-left,
+    .login-right {
+      transition: transform 0.55s cubic-bezier(0.77, 0, 0.175, 1),
+                  border-radius 0.55s cubic-bezier(0.77, 0, 0.175, 1),
+                  box-shadow 0.55s ease;
+      will-change: transform;
+    }
+
+    .login-wrapper.panel-switched .login-left {
+      transform: translateX(var(--right-panel-width));
+      border-radius: 0 1.5rem 1.5rem 0;
+      box-shadow: -8px 0 40px rgba(0, 0, 0, 0.18);
+    }
+
+    .login-wrapper.panel-switched .login-right {
+      transform: translateX(calc(-1 * var(--left-panel-width)));
+    }
+
+    /* ── Content visibility ── */
+    .login-left > *,
+    .login-right > * {
+      transition: opacity 0.18s ease, transform 0.18s ease;
+    }
+
+    /* Fade OUT — instant hide, no direction needed */
+    .login-wrapper.contents-hidden .login-left > *,
+    .login-wrapper.contents-hidden .login-right > * {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    /*
+      Directional reveal — content starts offset in the OPPOSITE direction
+      of the panel travel, then transitions to its natural position (0).
+
+      Panel went RIGHT (→) → content appears to come from the RIGHT (←)
+      So starting offset is positive X (pushed right), animates to 0.
+    */
+    .login-wrapper.reveal-from-right .login-left > *,
+    .login-wrapper.reveal-from-right .login-right > * {
+      opacity: 0;
+      transform: translateX(28px);
+    }
+
+    /* Panel went LEFT (←) → content appears to come from the LEFT (→) */
+    .login-wrapper.reveal-from-left .login-left > *,
+    .login-wrapper.reveal-from-left .login-right > * {
+      opacity: 0;
+      transform: translateX(-28px);
+    }
+  </style>
 </head>
 <body class="login-bg">
 
-<div class="login-wrapper">
+<div class="login-wrapper" id="loginWrapper">
 
   <!-- ── LEFT BLUE PANEL ───────────────────────────────── -->
-  <div class="login-left">
+  <div class="login-left" id="bluePanel">
     <div class="login-brand mb-5">
       <div class="login-brand-icon"><i class="bi bi-wallet2"></i></div>
       <span class="login-brand-name">ExpenseTracker</span>
@@ -50,7 +108,7 @@
   </div>
 
   <!-- ── RIGHT WHITE PANEL ─────────────────────────────── -->
-  <div class="login-right">
+  <div class="login-right" id="whitePanel">
 
     <!-- LOGIN FORM -->
     <div id="loginForm">
@@ -146,5 +204,91 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../assets/js/api.js"></script>
 <script src="../assets/js/auth.js"></script>
+
+<script>
+(function () {
+  var SLIDE_MS = 550; // panel slide  — matches CSS above
+  var FADE_OUT = 180; // content fade-out before slide starts
+  var FADE_IN  = 180; // content fade-in after slide ends (matches CSS transition)
+
+  var isSwitched  = false;
+  var isAnimating = false;
+
+  function updateCSSWidths() {
+    var wrapper    = document.getElementById('loginWrapper');
+    var bluePanel  = document.getElementById('bluePanel');
+    var whitePanel = document.getElementById('whitePanel');
+    wrapper.style.setProperty('--left-panel-width',  bluePanel.offsetWidth  + 'px');
+    wrapper.style.setProperty('--right-panel-width', whitePanel.offsetWidth + 'px');
+  }
+
+  function swapForms(target) {
+    var loginForm    = document.getElementById('loginForm');
+    var registerForm = document.getElementById('registerForm');
+    if (target === 'register') {
+      loginForm.classList.add('d-none');
+      registerForm.classList.remove('d-none');
+    } else {
+      registerForm.classList.add('d-none');
+      loginForm.classList.remove('d-none');
+    }
+  }
+
+  window.switchForm = function (target) {
+    if (isAnimating) return;
+    if (target === 'register' && isSwitched)  return;
+    if (target === 'login'    && !isSwitched) return;
+
+    isAnimating = true;
+    var wrapper   = document.getElementById('loginWrapper');
+    var goingRight = target === 'register'; // blue panel direction
+    updateCSSWidths();
+
+    // ── Step 1: fade content OUT (no direction class yet) ──
+    wrapper.classList.add('contents-hidden');
+
+    setTimeout(function () {
+
+      // ── Step 2: swap forms + slide panels (contents invisible) ──
+      swapForms(target);
+
+      if (goingRight) {
+        wrapper.classList.add('panel-switched');
+        isSwitched = true;
+      } else {
+        wrapper.classList.remove('panel-switched');
+        isSwitched = false;
+      }
+
+      // ── Step 3: after slide finishes, set directional start position ──
+      setTimeout(function () {
+
+        // Remove the plain hide, apply the directional offset instead.
+        // Content is still invisible (opacity:0) but now offset in the
+        // direction we want it to arrive FROM.
+        wrapper.classList.remove('contents-hidden');
+        wrapper.classList.add(goingRight ? 'reveal-from-right' : 'reveal-from-left');
+
+        // Force reflow so the browser registers the offset before we clear it
+        void wrapper.offsetHeight;
+
+        // ── Step 4: clear offset → CSS transition carries content to 0 ──
+        wrapper.classList.remove('reveal-from-right', 'reveal-from-left');
+
+        // Unlock after fade-in finishes
+        setTimeout(function () {
+          isAnimating = false;
+        }, FADE_IN);
+
+      }, SLIDE_MS);
+
+    }, FADE_OUT);
+  };
+
+  window.addEventListener('resize', function () {
+    if (isSwitched) updateCSSWidths();
+  });
+})();
+</script>
 </body>
 </html>
