--- a/frontend/reports.html
+++ b/frontend/reports.html
@@ -1,111 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Reports – ExpenseTracker</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"/>
-  <link rel="stylesheet" href="../assets/css/style.css"/>
+  <meta charset="UTF-8">
+  <title>Expense Reports</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body class="app-bg">
+<body>
 
-<div class="app-layout">
-  <aside class="sidebar">
-    <div class="sidebar-brand">
-      <div class="sb-icon"><i class="bi bi-wallet2"></i></div>
-      <div>
-        <div class="sb-name">ExpenseTracker</div>
-        <div class="sb-sub">Manage your expenses</div>
+<div class="container">
+  <h2>Reports</h2>
+  <p class="subtitle">Analyze your spending patterns</p>
+
+  <!-- Stats Cards -->
+  <div class="stats">
+    <div class="card">
+      <p>Total Expenses</p>
+      <h3 id="totalExpenses">$0.00</h3>
+    </div>
+    <div class="card">
+      <p>Average per Transaction</p>
+      <h3 id="avgTransaction">$0.00</h3>
+    </div>
+    <div class="card">
+      <p>Total Categories</p>
+      <h3 id="totalCategories">0</h3>
+    </div>
+  </div>
+
+  <!-- Bar Chart -->
+  <div class="chart-card">
+    <h3>Daily Expenses (Last 7 Days)</h3>
+    <canvas id="barChart"></canvas>
+  </div>
+
+  <!-- Bottom Section -->
+  <div class="bottom-section">
+    <div class="chart-card">
+      <h3>Expenses by Category</h3>
+      <canvas id="pieChart"></canvas>
+    </div>
+
+    <div class="chart-card">
+      <h3>Monthly Breakdown</h3>
+      <div class="monthly">
+        <span id="monthName"></span>
+        <span id="monthTotal">$0.00</span>
+      </div>
+      <div class="progress">
+        <div class="progress-bar"></div>
       </div>
     </div>
-    <nav class="sidebar-nav">
-      <a href="dashboard.html"    class="nav-item"><i class="bi bi-grid-1x2"></i>Dashboard</a>
-      <a href="add-expense.html"  class="nav-item"><i class="bi bi-plus-circle"></i>Add Expense</a>
-      <a href="expense-list.html" class="nav-item"><i class="bi bi-list-ul"></i>Expense List</a>
-      <a href="reports.html"      class="nav-item active"><i class="bi bi-bar-chart-line"></i>Reports</a>
-      <a href="settings.html"     class="nav-item"><i class="bi bi-gear"></i>Settings</a>
-    </nav>
-    <div class="sidebar-footer">
-      <a href="#" class="nav-item logout-item" onclick="handleLogout(event)">
-        <i class="bi bi-box-arrow-right"></i>Log Out
-      </a>
-      <div class="sb-copy">© 2026 ExpenseTracker</div>
-    </div>
-  </aside>
-
-  <main class="main-content">
-    <div class="page-header">
-      <h1 class="page-title">Reports</h1>
-      <p class="page-sub">Analyze your spending patterns</p>
-    </div>
-
-    <div class="content-pad">
-
-      <!-- SUMMARY CARDS -->
-      <div class="row g-3 mb-4">
-        <div class="col-md-4">
-          <div class="stat-card">
-            <div>
-              <div class="stat-lbl">Total Expenses</div>
-              <div class="stat-val text-danger" id="rTotal">—</div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="stat-card">
-            <div>
-              <div class="stat-lbl">Average per Transaction</div>
-              <div class="stat-val" id="rAvg">—</div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="stat-card">
-            <div>
-              <div class="stat-lbl">Total Categories</div>
-              <div class="stat-val" id="rCats">—</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- DAILY BAR CHART -->
-      <div class="card-panel mb-4">
-        <h6 class="panel-title mb-4">Daily Expenses (Last 7 Days)</h6>
-        <div style="height:280px;">
-          <canvas id="dailyChart"></canvas>
-        </div>
-      </div>
-
-      <!-- PIE + MONTHLY -->
-      <div class="row g-4">
-        <div class="col-lg-6">
-          <div class="card-panel h-100">
-            <h6 class="panel-title mb-4">Expenses by Category</h6>
-            <div class="chart-wrap">
-              <canvas id="reportPieChart"></canvas>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="card-panel h-100">
-            <h6 class="panel-title mb-4">Monthly Breakdown</h6>
-            <div id="monthlyBreakdown">
-              <div class="text-muted text-center py-5">Loading…</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </main>
+  </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
-<script src="../assets/js/api.js"></script>
-<script src="../assets/js/auth.js"></script>
-<script src="../assets/js/reports.js"></script>
+<script src="reports.js"></script>
 </body>
 </html>
