--- a/frontend/add-expense.html
+++ b/frontend/add-expense.html
@@ -1,90 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Add Expense – ExpenseTracker</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"/>
-  <link rel="stylesheet" href="../assets/css/style.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Daily Expense Management System</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body class="app-bg">
+<body>
+    <div class="app-container">
+        
+        <aside class="sidebar">
+            <div class="logo-section">
+                <div class="logo-icon">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <rect x="3" y="3" width="18" height="18" rx="2"/>
+                        <path d="M3 9h18"/>
+                        <path d="M9 21V9"/>
+                    </svg>
+                </div>
+                <div class="logo-text">
+                    <h1>ExpenseTracker</h1>
+                    <p>Manage your expenses</p>
+                </div>
+            </div>
 
-<div class="app-layout">
-  <aside class="sidebar">
-    <div class="sidebar-brand">
-      <div class="sb-icon"><i class="bi bi-wallet2"></i></div>
-      <div>
-        <div class="sb-name">ExpenseTracker</div>
-        <div class="sb-sub">Manage your expenses</div>
-      </div>
+            <nav class="nav-menu">
+                <a href="#dashboard" class="nav-item">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <rect x="3" y="3" width="7" height="7"/>
+                        <rect x="14" y="3" width="7" height="7"/>
+                        <rect x="14" y="14" width="7" height="7"/>
+                        <rect x="3" y="14" width="7" height="7"/>
+                    </svg>
+                    <span>Dashboard</span>
+                </a>
+                <a href="#add-expense" class="nav-item active">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <circle cx="12" cy="12" r="10"/>
+                        <path d="M12 8v8"/>
+                        <path d="M8 12h8"/>
+                    </svg>
+                    <span>Add Expense</span>
+                </a>
+                <a href="#expense-list" class="nav-item">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="8" y1="6" x2="21" y2="6"/>
+                        <line x1="8" y1="12" x2="21" y2="12"/>
+                        <line x1="8" y1="18" x2="21" y2="18"/>
+                        <line x1="3" y1="6" x2="3.01" y2="6"/>
+                        <line x1="3" y1="12" x2="3.01" y2="12"/>
+                        <line x1="3" y1="18" x2="3.01" y2="18"/>
+                    </svg>
+                    <span>Expense List</span>
+                </a>
+                <a href="#reports" class="nav-item">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="12" y1="20" x2="12" y2="10"/>
+                        <line x1="18" y1="20" x2="18" y2="4"/>
+                        <line x1="6" y1="20" x2="6" y2="16"/>
+                    </svg>
+                    <span>Reports</span>
+                </a>
+                <a href="#settings" class="nav-item">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <circle cx="12" cy="12" r="3"/>
+                        <path d="M12 1v6m0 6v6m0-18l-2.5 2.5M12 1l2.5 2.5M1 12h6m6 0h6m-18 0l2.5-2.5M1 12l2.5 2.5m20.5-2.5l-2.5-2.5m2.5 2.5l-2.5 2.5M12 23l-2.5-2.5M12 23l2.5-2.5"/>
+                    </svg>
+                    <span>Settings</span>
+                </a>
+            </nav>
+        </aside>
+
+        <!-- Main Content -->
+        <main class="main-content">
+            <div class="content-wrapper">
+                <div class="page-header">
+                    <div class="header-content">
+                        <h2>Add Expense</h2>
+                        <p class="subtitle">Record a new expense</p>
+                    </div>
+                </div>
+
+                <div class="form-card">
+                    <h3 class="section-title">Expense Details</h3>
+                    
+                    <form id="expenseForm" class="expense-form">
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="amount" class="form-label">
+                                    Amount ($)
+                                </label>
+                                <div class="input-wrapper">
+                                    <span class="input-prefix">$</span>
+                                    <input 
+                                        type="number" 
+                                        id="amount" 
+                                        name="amount" 
+                                        class="form-input with-prefix" 
+                                        placeholder="0.00"
+                                        step="0.01"
+                                        required
+                                    />
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="category" class="form-label">
+                                    Category
+                                </label>
+                                <div class="select-wrapper">
+                                    <select id="category" name="category" class="form-select" required>
+                                        <option value="">Select category</option>
+                                        <option value="food">Food & Dining</option>
+                                        <option value="transport">Transportation</option>
+                                        <option value="shopping">Shopping</option>
+                                        <option value="entertainment">Entertainment</option>
+                                        <option value="bills">Bills & Utilities</option>
+                                        <option value="health">Healthcare</option>
+                                        <option value="other">Other</option>
+                                    </select>
+                                    <svg class="select-arrow" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                        <polyline points="6 9 12 15 18 9"/>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="date" class="form-label">
+                                Date
+                            </label>
+                            <input 
+                                type="date" 
+                                id="date" 
+                                name="date" 
+                                class="form-input" 
+                                required
+                            />
+                        </div>
+
+                        <div class="form-group">
+                            <label for="description" class="form-label">
+                                Description
+                            </label>
+                            <textarea 
+                                id="description" 
+                                name="description" 
+                                class="form-textarea" 
+                                rows="4"
+                                placeholder="Enter expense description..."
+                            ></textarea>
+                        </div>
+
+                        <div class="form-actions">
+                            <button type="submit" class="btn btn-primary">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/>
+                                    <polyline points="17 21 17 13 7 13 7 21"/>
+                                    <polyline points="7 3 7 8 15 8"/>
+                                </svg>
+                                Save Expense
+                            </button>
+                            <button type="button" class="btn btn-secondary" id="cancelBtn">
+                                Cancel
+                            </button>
+                        </div>
+                    </form>
+                </div>
+
+                <footer class="footer">
+                    <p>&copy; 2029 ExpenseTracker</p>
+                </footer>
+            </div>
+        </main>
     </div>
-    <nav class="sidebar-nav">
-      <a href="dashboard.html"    class="nav-item"><i class="bi bi-grid-1x2"></i>Dashboard</a>
-      <a href="add-expense.html"  class="nav-item active"><i class="bi bi-plus-circle"></i>Add Expense</a>
-      <a href="expense-list.html" class="nav-item"><i class="bi bi-list-ul"></i>Expense List</a>
-      <a href="reports.html"      class="nav-item"><i class="bi bi-bar-chart-line"></i>Reports</a>
-      <a href="settings.html"     class="nav-item"><i class="bi bi-gear"></i>Settings</a>
-    </nav>
-    <div class="sidebar-footer">
-      <a href="#" class="nav-item logout-item" onclick="handleLogout(event)">
-        <i class="bi bi-box-arrow-right"></i>Log Out
-      </a>
-      <div class="sb-copy">© 2026 ExpenseTracker</div>
-    </div>
-  </aside>
 
-  <main class="main-content">
-    <div class="page-header">
-      <h1 class="page-title">Add Expense</h1>
-      <p class="page-sub">Record a new expense</p>
-    </div>
-
-    <div class="content-pad">
-      <div class="card-panel" style="max-width:700px;">
-        <h6 class="panel-title mb-4">Expense Details</h6>
-
-        <div id="formAlert" class="alert d-none" role="alert"></div>
-
-        <div class="row g-3 mb-3">
-          <div class="col-md-6">
-            <label class="form-label fw-medium">Amount ($)</label>
-            <input type="number" id="amount" class="form-control bg-light border-0 rounded-3"
-                   placeholder="0.00" min="0.01" step="0.01"/>
-          </div>
-          <div class="col-md-6">
-            <label class="form-label fw-medium">Category</label>
-            <select id="category" class="form-select bg-light border-0 rounded-3">
-              <option value="">Select category</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="mb-3">
-          <label class="form-label fw-medium">Date</label>
-          <input type="date" id="expDate" class="form-control bg-light border-0 rounded-3"/>
-        </div>
-
-        <div class="mb-4">
-          <label class="form-label fw-medium">Description</label>
-          <textarea id="description" class="form-control bg-light border-0 rounded-3" rows="3"
-                    placeholder="Enter expense description…"></textarea>
-        </div>
-
-        <div class="d-flex gap-3">
-          <button class="btn btn-dark btn-lg flex-grow-1 rounded-3 fw-semibold"
-                  onclick="saveExpense()">Save Expense</button>
-          <button class="btn btn-outline-secondary btn-lg rounded-3"
-                  onclick="clearForm()">Cancel</button>
-        </div>
-      </div>
-    </div>
-  </main>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../assets/js/api.js"></script>
-<script src="../assets/js/auth.js"></script>
-<script src="../assets/js/add-expense.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
